Modified to not use logstash but Jpa

--- a/elasticsearchDatabase/src/main/resources/application.properties
+++ b/elasticsearchDatabase/src/main/resources/application.properties
@@ -2,4 +2,4 @@ elasticsearch.clustername = alpha-q-cluster
 elasticsearch.host = localhost
 elasticsearch.port = 9300
 
-server.port = 8090
+app.serverport = 8090
