--- a/AndroidCameraRecognition/app/src/main/AndroidManifest.xml
+++ b/AndroidCameraRecognition/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
 
         <activity android:name=".ValidateEmployee" />
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainMenuActivity"></activity>
     </application>
 
 </manifest>
