--- a/AndroidCameraRecognition/app/build.gradle
+++ b/AndroidCameraRecognition/app/build.gradle
@@ -17,6 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -33,4 +43,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-vision:9.8.0'
     implementation 'com.android.support:recyclerview-v7:25.1.1'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    //implementation group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.6'
+    implementation 'org.tensorflow:tensorflow-android:+'
 }
