--- a/AndroidCameraRecognition/app/src/main/AndroidManifest.xml
+++ b/AndroidCameraRecognition/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -27,6 +30,16 @@
         <activity android:name=".ValidateEmployee" />
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".MainMenuActivity"></activity>
+        <activity android:name=".ShowPopUp"></activity>
+        <activity android:name=".imageclassifier.TensorTestActivity"></activity>
+
+        <activity android:name=".imageclassifier.ClassifierActivity" android:screenOrientation="portrait"
+            android:label="Tensor Test">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
