--- a/AndroidCameraRecognition/app/build.gradle
+++ b/AndroidCameraRecognition/app/build.gradle
@@ -46,4 +46,9 @@ dependencies {
     //implementation group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
     implementation 'org.apache.httpcomponents:httpclient:4.5.6'
     implementation 'org.tensorflow:tensorflow-android:+'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+
+    // JSON Parsing
+    implementation 'com.google.code.gson:gson:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 }
