--- a/AndroidCameraRecognition/local.properties
+++ b/AndroidCameraRecognition/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Aug 21 18:50:07 GST 2018
-sdk.dir=C\:\\Users\\v.seenundun\\AppData\\Local\\Android\\Sdk
+#Mon Sep 17 15:38:26 GST 2018
+sdk.dir=C\:\\Users\\b.purmah\\AppData\\Local\\Android\\Sdk
